The silly array annotation for screenshots fixed